--- a/PhongKham/Forms/frmThuoc.resx
+++ b/PhongKham/Forms/frmThuoc.resx
@@ -117,7 +117,47 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="toolStripSave.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAF7SURBVDhPY5BWNWy08k+7bQ3EKoamnxMKir/CsG9o1A89
+        M+u/5o7uf0ztXf9Y2bv+lZBX/qlpF/5KRtXUjgEEFDTN5jete/wfhGNzqv/ffP4Gjpdt3PLfJTjqv62b
+        139Hd+//AcnZ/229Q/7XrHjwX9Um9AFQOxNRBrj6Bf/PKCj775eQ+T+6oBasNrx++x9FQ+dGFAPC08r+
+        n7x26//pG3fAeMGqdf/tvAP/u4XE/HfyDfrvG5/+39LNH6y2aMmD/8oWfrtQDCiZdeJ/WF7X/9DcTjgO
+        zmr5H5jeAMZ+aXX/S+acxW0AKXgQGpBUN/9/UGoVQRySVvU/u2MlFgPyUaMQF77x7PX/lPxyTAMmLN7y
+        f8uBI/9LqoEhjQfvOXnuf0peBaYBjZMW/t+y/zBWTch494mz2A1ILqj+v+/Uuf8TZ83Fiw9fuIrbgAt3
+        H/3fA7QBH75w/wluA4gJAwwvwLKzuokVPBvjw8lZFd8MzMx+mHqmPVU28ZoOAKxxgTgyJUP+AAAAAElF
+        TkSuQmCC
+</value>
+  </data>
+  <data name="toolStripDelete.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAC9SURBVDhPpVNbCsIwEMxJRDyRJCv9rz+iTfSU6iVEROv2
+        qx6hdtcqoSabQgYCSXZmNg9GoYM1buBVOzjhvpirBIhTV3AmDVpTKp446Gjcd+YqmVCNOQMfnW4Vd/5t
+        xE3+xdA9rT72BqvZo4KLX8Dt8tYc9GLQpjkSYUoDRuiItA7tRd8p2M0foc5jRE2miAlZBllXyHpE6auk
+        WlLMhB4ih4PhFWL/HLoixSA/TBRJmlAwJPEXxPkEULdoTfkGO/ml561nSOsAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="toolStripCancel.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
+        YKxG6WBogkMZKgPNCEVJFBGdGETEvgwyO9DJE5syZw3PIlPEE9pgBCLZ5XvdMB8Ew8gXbl54nuf63dd9
+        0OGSnwCahxbPRNPAPMw9Xpg6ZmF46kZZ0xSKzJPIrhpDWsVnpBhGkKx3nAX8Pv7z1zg8OoY/cITdn4fw
+        bf/C0kYAN3Ma/w3gWfZL5kzTKBxjWyK2DftwI9tyMYCZKXbNHaD91bLYJrDXsYbrWfUKwJrPE9M2M1Oc
+        VzOOpHI7Jr376Hi9ogHqFIANO0/MmmmbmSmm9a8ze+I4MrNWAdjtoJgWcx+PSzg166yZZ8xM8XvXDix9
+        c4jIqFYAjoriBV9AhEPv1mH/sonogha0afbZMMZz+yreTGyhpusHwtNNCsA5U1zS4BLxzJIfg299qO32
+        Ir7UJtZfftyATqeT+8o2D8JSjQrAJblrncYL7ZJ2+bfaFnC/1S1NjL3diRat7qrO7wLRP3HjWsojBeCo
+        mDEo5mNjuweFGvjWg2EBhCbpkW78htSHHwRyNdmgAFzPEee2iFkzayy2OLXzT4gr6UdUnlXrullsxxQ+
+        kx0g8BTA3aZlButjSTyjODq/WcQcW/B/Je4OQhLvKQDnzN1mp0nnkvAhR8VuMzNrpm1mpjgkoVwB/v8D
+        TgDQASA1MVpwzwAAAABJRU5ErkJggg==
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAAAAAAAEAIACeQAAAFgAAAIlQTkcNChoKAAAADUlIRFIAAAEAAAABAAgGAAAAXHKoZgAAAAFv
