--- a/PhongKham/Forms_DE/frmToaThuoc.resx
+++ b/PhongKham/Forms_DE/frmToaThuoc.resx
@@ -136,4 +136,10 @@
         TgDQASA1MVpwzwAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="phongKhamDataSet.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>154, 18</value>
+  </metadata>
+  <metadata name="tToaThuocTableAdapter.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>387, 24</value>
+  </metadata>
 </root>
