--- a/PhongKham/Properties/Resources.resx
+++ b/PhongKham/Properties/Resources.resx
@@ -133,4 +133,7 @@
   <data name="3358576" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\3358576.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="bh" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bh.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
