--- a/PhongKham/Forms_DE/frmToaThuoc.resx
+++ b/PhongKham/Forms_DE/frmToaThuoc.resx
@@ -142,4 +142,7 @@
   <metadata name="tToaThuocTableAdapter.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>387, 24</value>
   </metadata>
+  <metadata name="tBenhNhanBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>607, 24</value>
+  </metadata>
 </root>
